--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,12 @@
         "php": "^8.2",
         "laravel/framework": "^11.9",
         "laravel/horizon": "^5.29",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "pgvector/pgvector": "^0.2.0",
+        "spatie/laravel-data": "^4.11"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^3.2",
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.13",
@@ -37,7 +40,10 @@
             "@php artisan package:discover --ansi"
         ],
         "post-update-cmd": [
-            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
+            "@php artisan vendor:publish --tag=laravel-assets --ansi --force",
+            "@php artisan ide-helper:generate",
+            "@php artisan ide-helper:meta",
+            "@php artisan ide-helper:model --write-mixin"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
