--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ x-php: &php
     - .:/srv
 
 x-nvidia: &nvidia
+  mem_limit: 10gb
+  memswap_limit: 15gb
   deploy:
     resources:
       reservations:
@@ -52,7 +54,7 @@ services:
     labels:
       - traefik.enable=true
       - traefik.http.routers.php.entryPoints=web-secure
-      - traefik.http.routers.php.rule=Host(`app.docker.localhost`)
+      - traefik.http.routers.php.rule=Host(`api.docker.localhost`) || Host(`horizon.docker.localhost`)
       - traefik.http.routers.php.tls=true
 
   queue:
@@ -68,6 +70,7 @@ services:
   ollama:
     <<: *nvidia
     image: ollama/ollama
+    restart: unless-stopped
     ports:
       - "11434:11434"
     volumes:
@@ -75,13 +78,14 @@ services:
 
   timescaledb:
     image: timescale/timescaledb-ha:pg16
+    restart: unless-stopped
     environment:
       POSTGRES_DB: $DB_DATABASE
       POSTGRES_USER: $DB_USERNAME
       POSTGRES_PASSWORD: $DB_PASSWORD
+      POSTGRES_OPTIONS: "-c ai.ollama_host=http://ollama:11434"
     volumes:
       - postgres-data:/home/postgres/pgdata/data
-    command: bash -c "postgres -c ai.ollama_host=http://ollama:11434"
     ports:
       - ${DB_PORT}:5432
 
@@ -94,7 +98,6 @@ services:
   comfy:
     <<: *nvidia
     image: yanwk/comfyui-boot:cu121
-    user: 1000:1000
     restart: unless-stopped
     volumes:
       - .comfy/runner:/home/runner
