--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,19 @@
   },
   "dependencies": {
     "@tailwindcss/container-queries": "^0.1.1",
+    "@vueuse/core": "^11.2.0",
     "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "gsap": "^3.12.5",
+    "lucide-vue-next": "^0.454.0",
     "postcss": "^8.4.47",
+    "radix-vue": "^1.9.8",
     "swiper": "^11.1.14",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.14",
+    "tailwindcss-animate": "^1.0.7",
+    "vaul-vue": "^0.2.0",
     "vue": "^3.5.12"
   },
   "devDependencies": {
