--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/container-queries": "^0.1.1",
     "@vee-validate/zod": "^4.14.6",
     "@vueuse/core": "^11.2.0",
@@ -30,8 +31,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
-    "laravel-echo": "^1.16.1",
-    "pusher-js": "^8.4.0-rc2",
     "typescript": "~5.6.2",
     "vite": "^5.4.10",
     "vue-tsc": "^2.1.8"
