--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -15,21 +15,6 @@ x-php: &php
   volumes:
     - .:/srv
 
-x-nvidia: &nvidia
-#  environment:
-#    - CLI_ARGS=--cpu
-  deploy:
-    resources:
-      reservations:
-        devices:
-          - driver: cdi # https://nixos.org/manual/nixpkgs/unstable/#running-docker-or-podman-containers-with-cuda-support
-            device_ids:
-              - nvidia.com/gpu=all
-
-x-cpu: &cpu
-  environment:
-    - CLI_ARGS=--cpu
-
 services:
 
   traefik:
@@ -70,33 +55,8 @@ services:
     labels:
       - traefik.enable=true
       - traefik.http.routers.php.entryPoints=web-secure
-      - traefik.http.routers.php.rule=Host(`$API_DOMAIN`) || Host(`$ASSETS_DOMAIN`) || Host(`$HORIZON_DOMAIN`)
+      - traefik.http.routers.php.rule=Host(`$API_DOMAIN`) || Host(`$ASSETS_DOMAIN`)
       - traefik.http.routers.php.tls=true
-
-  queue:
-    <<: *php
-    command: php artisan horizon
-    networks:
-      - local-network
-      - traefik-network
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.horizon.entryPoints=web-secure
-      - traefik.http.routers.horizon.rule=Host(`$HORIZON_DOMAIN`)
-      - traefik.http.routers.horizon.tls=true
-
-  reverb:
-    <<: *php
-    command: php artisan reverb:start --debug
-    networks:
-      - local-network
-      - traefik-network
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.reverb.entryPoints=web-secure
-      - traefik.http.routers.reverb.rule=Host(`reverb.docker.localhost`)
-      - traefik.http.routers.reverb.tls=true
-      - traefik.http.services.reverb.loadBalancer.server.port=8080
 
   scheduler:
     <<: [ *php, *local-network ]
@@ -109,21 +69,9 @@ services:
     volumes:
       - redis-data:/data
 
-  ollama:
-    <<: [ *nvidia, *local-network ]
-    networks:
-      - local-network
-      - traefik-network
-    image: ollama/ollama:0.3.14
-    restart: unless-stopped
-    ports:
-      - "11434:11434"
-    volumes:
-      - .ollama:/root/.ollama
-
   timescaledb:
     <<: *local-network
-    image: timescale/timescaledb-ha:pg16
+    image: timescale/timescaledb-ha:pg17
     restart: unless-stopped
     environment:
       POSTGRES_DB: $DB_DATABASE
@@ -135,36 +83,9 @@ services:
     ports:
       - ${DB_PORT}:5432
 
-  comfyui:
-    <<: [ *nvidia, *local-network ]
-    build:
-      dockerfile: comfyui.dockerfile
-      context: docker/comfyui
-    restart: unless-stopped
-    volumes:
-      - .comfy:/home/runner
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.comfyui.entryPoints=web-secure
-      - traefik.http.routers.comfyui.rule=Host(`$COMFYUI_DOMAIN`)
-      - traefik.http.routers.comfyui.tls=true
-
-#  open-webui:
-#    image: ghcr.io/open-webui/open-webui:main
-#    volumes:
-#      - open-webui:/app/backend/data
-#    depends_on:
-#      - ollama
-#    ports:
-#      - "8080:8080"
-#    environment:
-#      - 'OLLAMA_BASE_URL=http://ollama:11434'
-#      - 'WEBUI_SECRET_KEY='
-
 volumes:
   redis-data:
   timescaledb-data:
-  open-webui:
 
 networks:
   local-network:
