--- a/worker/docker/php/config/php-config.development.ini
+++ b/worker/docker/php/config/php-config.development.ini
@@ -1,7 +1,8 @@
 upload_max_filesize = 100M
 post_max_size = 100M
+memory_limit = 2048M
 
-;[opcache]
-;opcache.enable=1
-;opcache.jit=tracing
-;opcache.jit_buffer_size=100M # This is broken https://github.com/dunglas/frankenphp/issues/309
+[opcache]
+opcache.enable=1
+opcache.jit=tracing
+opcache.jit_buffer_size=100M
