split work generation

--- a/worker/.env.example
+++ b/worker/.env.example
@@ -3,6 +3,9 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 
+MODE=ollama
+
+COMFYUI_DOMAIN=comfyui.docker.localhost
 COMFYUI_INTERNAL_URL=http://comfyui:8188
 OLLAMA_INTERNAL_URL=http://ollama:11434
 
