--- a/worker/docker-compose.yml
+++ b/worker/docker-compose.yml
@@ -23,7 +23,7 @@ services:
 
   queue:
     <<: *php
-    command: php artisan queue:work --timeout=720
+    command: php artisan queue:work --timeout=720 --tries=1
     networks:
       - local-network
       - traefik-network
