--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,6 +12,7 @@ HORIZON_DOMAIN=horizon.docker.localhost
 COMFYUI_DOMAIN=comfyui.docker.localhost
 COMFYUI_INTERNAL_URL=http://comfyui:8188
 OLLAMA_INTERNAL_URL=http://ollama:11434
+TELESCOPE_DOMAIN=telescope.docker.localhost
 
 OLLAMA_MODEL=llama3.2:3b
 OLLAMA_EMBEDDING_MODEL=mxbai-embed-large
