--- a/backend/composer.json
+++ b/backend/composer.json
@@ -11,6 +11,7 @@
         "php": "^8.2",
         "laravel/framework": "^11.9",
         "laravel/horizon": "^5.29",
+        "laravel/telescope": "^5.2",
         "laravel/tinker": "^2.9",
         "spatie/laravel-data": "^4.11",
         "spatie/laravel-image-optimizer": "^1.8"
