--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -15,6 +15,9 @@ x-php: &php
   volumes:
     - .:/srv
 
+x-nvidia: &nvidia
+  runtime: nvidia
+
 services:
 
   traefik:
@@ -82,6 +85,16 @@ services:
       - timescaledb-data:/home/postgres/pgdata/data
     ports:
       - ${DB_PORT}:5432
+
+  ollama:
+    <<: [ *nvidia, *local-network ]
+    networks:
+      - local-network
+      - traefik-network
+    image: ollama/ollama:0.5.1
+    restart: unless-stopped
+    volumes:
+      - .ollama:/root/.ollama
 
 volumes:
   redis-data:
