Split generation into 2 phases (#3)
* split work generation

* add missing exception

* WIP

* add missing controller

* update default state

* add failed reason

* update routes

* throw on error

* fix data type

* drop unnecessary columns

* refactor

* update state check

* fix issue

* queue jobs every second

* add after()

* fix migration

* update timeout

* only retry 1 time

* update query

* revert

* optimize

* add telescope

* increase worker memory limit

* limit max jobs

* revert

* revert

* revert

* update php ini and memory

* retry books

* some bug fixes on the frontend

* update backend

* update worker

* select for update

---------

Co-authored-by: hello-liang-shan <hello.liang.shan@gmail.com>

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -15,6 +15,9 @@ x-php: &php
   volumes:
     - .:/srv
 
+x-nvidia: &nvidia
+  runtime: nvidia
+
 services:
 
   traefik:
@@ -55,7 +58,7 @@ services:
     labels:
       - traefik.enable=true
       - traefik.http.routers.php.entryPoints=web-secure
-      - traefik.http.routers.php.rule=Host(`$API_DOMAIN`) || Host(`$ASSETS_DOMAIN`)
+      - traefik.http.routers.php.rule=Host(`$API_DOMAIN`) || Host(`$ASSETS_DOMAIN`) || Host(`$TELESCOPE_DOMAIN`)
       - traefik.http.routers.php.tls=true
 
   scheduler:
@@ -82,6 +85,16 @@ services:
       - timescaledb-data:/home/postgres/pgdata/data
     ports:
       - ${DB_PORT}:5432
+
+  ollama:
+    <<: [ *nvidia, *local-network ]
+    networks:
+      - local-network
+      - traefik-network
+    image: ollama/ollama:0.5.1
+    restart: unless-stopped
+    volumes:
+      - .ollama:/root/.ollama
 
 volumes:
   redis-data:
