--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -65,6 +65,14 @@ services:
     <<: [ *php, *local-network ]
     command: php artisan schedule:work
 
+  queue:
+    <<: [ *php, *local-network ]
+    depends_on:
+      - redis
+      - timescaledb
+      - ollama
+    command: php artisan queue:work --timeout=720 --memory=1024 --max-jobs=128
+
   redis:
     <<: *local-network
     image: redis:7-alpine
