--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,24 +1,15 @@
-APP_NAME=DevChallenge
+APP_NAME=DearBook
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=https://api.docker.localhost
 
-LOW_VRAM_MODE=false
-
 API_DOMAIN=api.docker.localhost
 ASSETS_DOMAIN=assets.docker.localhost
-HORIZON_DOMAIN=horizon.docker.localhost
-COMFYUI_DOMAIN=comfyui.docker.localhost
-COMFYUI_INTERNAL_URL=http://comfyui:8188
-OLLAMA_INTERNAL_URL=http://ollama:11434
 TELESCOPE_DOMAIN=telescope.docker.localhost
 
+OLLAMA_INTERNAL_URL=http://ollama:11434
 OLLAMA_MODEL=llama3.2:3b
-OLLAMA_EMBEDDING_MODEL=mxbai-embed-large
-
-OLLAMA_QUEUE_WORKERS_COUNT=1
-COMFYUI_QUEUE_WORKERS_COUNT=1
 
 DB_CONNECTION=pgsql
 DB_HOST=timescaledb
@@ -29,11 +20,3 @@ DB_PASSWORD=secret
 
 REDIS_HOST=redis
 QUEUE_CONNECTION=redis
-BROADCAST_CONNECTION=reverb
-
-REVERB_APP_ID=100000
-REVERB_APP_KEY=public
-REVERB_APP_SECRET=secret
-REVERB_HOST=reverb
-REVERB_PORT=8080
-REVERB_SCHEME=http
