store images to s3

--- a/worker/.env.example
+++ b/worker/.env.example
@@ -3,12 +3,21 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 
+COMFYUI_DEBUG=false
 COMFYUI_DOMAIN=comfyui.docker.localhost
 COMFYUI_INTERNAL_URL=http://comfyui:8188
 
 BACKEND_URL=http://php
 WORKER_API_KEY=secret
 
+FILESYSTEM_DISK=s3
 REDIS_HOST=redis-worker
 QUEUE_CONNECTION=redis
 CACHE_STORE=redis
+
+AWS_ACCESS_KEY_ID=admin
+AWS_SECRET_ACCESS_KEY=secret-password
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=development
+AWS_USE_PATH_STYLE_ENDPOINT=true
+AWS_ENDPOINT=https://assets.docker.localhost
