--- a/worker/docker-compose.yml
+++ b/worker/docker-compose.yml
@@ -14,6 +14,8 @@ x-php: &php
   working_dir: /srv
   volumes:
     - .:/srv
+    - ~/.composer:/home/composer/.composer:delegated
+    - ./vendor:/srv/vendor:delegated
 
 x-nvidia: &nvidia
   runtime: nvidia
