--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -14,6 +14,8 @@ x-php: &php
   working_dir: /srv
   volumes:
     - .:/srv
+    - ~/.composer:/home/composer/.composer:delegated
+    - ./vendor:/srv/vendor:delegated
 
 x-nvidia: &nvidia
   restart: unless-stopped
@@ -61,7 +63,7 @@ services:
     labels:
       - traefik.enable=true
       - traefik.http.routers.php.entryPoints=web-secure
-      - traefik.http.routers.php.rule=Host(`$API_DOMAIN`) || Host(`$ASSETS_DOMAIN`) || Host(`$TELESCOPE_DOMAIN`)
+      - traefik.http.routers.php.rule=Host(`$API_DOMAIN`) || Host(`$TELESCOPE_DOMAIN`)
       - traefik.http.routers.php.tls=true
 
   scheduler:
@@ -134,6 +136,7 @@ services:
 
 volumes:
   redis-data:
+  minio-data:
   timescaledb-data:
 
 networks:
