remove wallet integration

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,6 +4,8 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=https://api.docker.localhost
 
+WORKER_API_KEY=secret
+
 API_DOMAIN=api.docker.localhost
 ASSETS_DOMAIN=assets.docker.localhost
 TELESCOPE_DOMAIN=telescope.docker.localhost
