--- a/worker/.env.example
+++ b/worker/.env.example
@@ -6,8 +6,8 @@ APP_DEBUG=true
 COMFYUI_DOMAIN=comfyui.docker.localhost
 COMFYUI_INTERNAL_URL=http://comfyui:8188
 
-BACKEND_URL=https://api.dearbook.fun
-WORKER_API_KEY=
+BACKEND_URL=http://php
+WORKER_API_KEY=secret
 
 REDIS_HOST=redis-worker
 QUEUE_CONNECTION=redis
