--- a/backend/composer.json
+++ b/backend/composer.json
@@ -9,8 +9,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "attestto/solana-php-sdk": "dev-master",
         "laravel/framework": "^11.9",
-        "laravel/horizon": "^5.29",
         "laravel/telescope": "^5.2",
         "laravel/tinker": "^2.9",
         "spatie/laravel-data": "^4.11",
@@ -74,6 +74,6 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
