--- a/backend/composer.json
+++ b/backend/composer.json
@@ -9,10 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ext-intl": "*",
         "attestto/solana-php-sdk": "dev-master",
         "laravel/framework": "^11.9",
         "laravel/telescope": "^5.2",
         "laravel/tinker": "^2.9",
+        "prinsfrank/standards": "^3.11",
         "spatie/laravel-data": "^4.11",
         "spatie/laravel-image-optimizer": "^1.8"
     },
