--- a/backend/composer.json
+++ b/backend/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.2",
         "ext-intl": "*",
+        "ext-redis": "*",
         "attestto/solana-php-sdk": "dev-master",
         "laravel/framework": "^11.9",
         "laravel/telescope": "^5.2",
